added EF core for login

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-
+  "ConnectionStrings": {
+    "EnterpriseConnection": "Server=MSI;Database=Enterprise;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Jwt": {
     "Key": "ThisIsASecretKeyForJwtToken123456!",
     "Issuer": "MyApp",
