--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "EnterpriseConnection": "Server=tcp:bmassqlserver.database.windows.net,1433;Initial Catalog=bmasdb;Persist Security Info=False;User ID=bmasadminuser;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "EnterpriseConnection": "Server=MSI;Database=Enterprise;Trusted_Connection=True;TrustServerCertificate=True;"
     },
   "Jwt": {
     "Key": "ThisIsASecretKeyForJwtToken123456!",
